<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:hint="@string/Name"
        android:autofillHints="name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_below="@id/nameEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:autofillHints="Password"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/Register" />
</RelativeLayout>
