<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".LoginActivity">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:layout_below="@id/emailEditText"
            android:layout_marginTop="8dp"
            android:autofillHints="Password"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordEditText"
            android:layout_alignParentStart="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="25dp"
            android:text="@string/Login" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>